--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,12 +8,13 @@ services:
       context: .
       target: dev
     container_name: micro-videos-app
-    entrypoint: dockerize -template /templates/.env:.env -wait tcp://db:3306 -timeout 40s /entrypoint.sh
+    entrypoint: dockerize -template /templates/.env:.env -template /templates/.env.testing:.env.testing -wait tcp://db:3306 -timeout 40s /entrypoint.sh
     environment:
-      - DB_HOST=db
-      - DB_DATABASE=code_micro_videos
-      - DB_USERNAME=root
-      - DB_PASSWORD=root
+      - _DB_HOST=db
+      - _DB_DATABASE=code_micro_videos
+      - _DB_USERNAME=root
+      - _DB_PASSWORD=root
+      - _TEST_DB_DATABASE=code_micro_videos_test
     volumes:
       - ./www:/var/www
     networks:
@@ -39,14 +40,15 @@ services:
   db:
     build: ./.docker/mysql
     container_name: micro-videos-db
+    command: --innodb-use-native-aio=0
     restart: always
     tty: true
     ports:
       - "33006:3306"
     volumes:
       - ./.docker/dbdata:/var/lib/mysql
+      - ./.docker/mysql:/docker-entrypoint-initdb.d
     environment:
-      - MYSQL_DATABASE=code_micro_videos
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_USER=root
     networks:
