--- a/docker-compose.cloudbuild.yaml
+++ b/docker-compose.cloudbuild.yaml
@@ -6,9 +6,8 @@ services:
     build:
       dockerfile: .docker/app/Dockerfile
       context: .
-      target: dev
+      target: cloudbuild
     container_name: micro-videos-app
-    entrypoint: dockerize -wait tcp://db:3306 -timeout 40s /entrypoint.sh
     volumes:
       - ./www:/var/www
     networks:
