--- a/www/.env.testing.example
+++ b/www/.env.testing.example
@@ -1,5 +1,5 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=testing
 APP_KEY=base64:d1q4K8qgZPKvNXy4FwiksjfVIHzAMxyiC3ZchM2DJ/k=
 APP_DEBUG=true
 APP_URL=http://localhost
